--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
 
+
     <FrameLayout
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
@@ -20,6 +21,8 @@
         android:layout_height="56dp"
         android:layout_gravity="start"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/tab_navigation_items"/>
+        app:menu="@menu/tab_navigation_menu"
+
+        />
 
 </RelativeLayout>
